# collage

./: .gitignore  Procfile  README.md  cypress.config.js  package-lock.json  package.json  project_structure.txt  pyproject.toml  pyvenv.cfg  requirements.txt  webpack.config.js  wsgi.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml  deploy_frontend.yml
Scripts/: activate  activate.bat  activate.fish  activate.nu  activate_this.py  get_gprof  get_objgraph  undill
collage/: __init__.py  config.py  model.py
collage/frontend/: About.js  About.jsx  App.js  Auth.jsx  ForStudents.jsx  Home.js  Mission.js  Navbar.js  Navbar.jsx  Private.jsx  Support.js  course_tag.jsx  main.jsx  registration.jsx
collage/frontend/CSS/: FileUpload.css  Landing.css  Navbar.css  Personal.css  ProfBar.css  Search.css  Signup.css  Styles.module.css  activityglimpse.css  classPreview.css  course_tag.css  savedCourses.css  userProfile.css
collage/frontend/Class/: Classpreview.jsx  Preview.jsx  rating.jsx
collage/frontend/Home/: CourseBox.jsx  Home.jsx  ProfileBar.jsx
collage/frontend/Landing/: Home-1.jsx  Home-2.jsx  Home-3.jsx  Home-4.jsx  Home.jsx  Landing-1.jsx  Landing-2.jsx  Landing-3.jsx  Landing-4.jsx  Landing-new.jsx  Landing.jsx
collage/frontend/Login/: Login-1.jsx  Wrapper.jsx
collage/server/: __init__.py  agent.py  auth.py  course.py  dalle.py  helper.py  main.py  nltk.py  nltk_utils.py  pastroutes.py  recommend.py
collage/templates/: index.html
collage/views/: __init__.py  index.py
database/: data.sql  schema.sql
docs/: agent.md  recomm.md
(+21 files in other folders)
